tests/query_errors/node_duplicate_name_operator/error.txt
Error: 
    2 | 
    3 | create operator c1 from counter;
    4 | create operator c1 from counter;
      | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Name `c1` is already in use for another node, please use another name.
    5 | 
    6 | select event from in into c1;
